# MooCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  OVERVIEW.md  README.md  cmake_doc.md
cmake/: BundledCurl.cmake  PatchFTXUI.cmake  mingw-w64-x86_64.cmake
src/: CMakeLists.txt
src/agent/: agent.cpp  agent.hpp  anthropic_provider.cpp  anthropic_provider.hpp  builtin_tools.cpp  builtin_tools.hpp  clangd_tools.cpp  clangd_tools.hpp  diff.cpp  diff.hpp  fsutil.hpp  gemini_provider.cpp  gemini_provider.hpp  git_tools.cpp  git_tools.hpp  gitea.cpp  gitea.hpp  gitea_internal.hpp  http.cpp  http.hpp  http_detail.hpp  image_chip.hpp  image_util.hpp  json_util.cpp  json_util.hpp  lsp_client.cpp  lsp_client.hpp  lsp_detail.hpp  main.cpp  mentions.cpp  mentions.hpp  onboarding.cpp  onboarding.hpp  openai_provider.cpp  openai_provider.hpp  paste_chip.hpp  permissions.cpp  permissions.hpp  persist.cpp  persist.hpp  (+43 more)
tests/: CMakeLists.txt  loopback_server.hpp  temp_dir.hpp  test_agent.cpp  test_anthropic_provider.cpp  test_builtins.cpp  test_compact.cpp  test_compact_cancel.cpp  test_diff.cpp  test_gemini_provider.cpp  test_git.cpp  test_gitea.cpp  test_harness.hpp  test_http.cpp  test_json.cpp  test_lsp.cpp  test_main.cpp  test_mentions.cpp  test_onboarding.cpp  test_permissions.cpp  test_persist.cpp  test_provider.cpp  test_question.cpp  test_retry.cpp  test_rtk.cpp  test_search.cpp  test_settings_editor.cpp  test_skills.cpp  test_stream.cpp  test_subagent.cpp  test_subagent_restricted.cpp  test_syntax.cpp  test_tools.cpp  test_tui.cpp  test_tui_slash.cpp  test_tui_worker.cpp  test_types.cpp
